--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="icon" href="/logo.svg" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="/favicons/favicon.svg" />
+
+		<title>Echoes of the Deep</title>
+		<meta name="description" content="Code in Abyss" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
